<resources>
    <string name="app_name">SORMAS</string>
    <string name="and">and</string>
    <string name="no">No</string>
    <string name="notAnswered">Not answered</string>
    <string name="system">System</string>
    <string name="yes">Yes</string>
    <string name="all">All</string>
    <string name="completed">completed</string>
    <string name="action_add_missing_case">Add Missing Case</string>
    <string name="action_allow_gps_access">Allow GPS Access</string>
    <string name="action_apply_filters">Apply filters</string>
    <string name="action_back_to_settings">Back to settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_change_PIN">Change PIN</string>
    <string name="action_change_settings"><u>Change Settings</u></string>
    <string name="action_clear">Clear</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_close_app">Close SORMAS</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_create">Create</string>
    <string name="action_create_case_from_contact">Create a case for this contact person</string>
    <string name="action_create_case_from_event_participant">Create a case for this event participant</string>
    <string name="action_create_treatment">Create treatment</string>
    <string name="action_edit_data">Edit data</string>
    <string name="action_delete">Delete</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_done">Done</string>
    <string name="action_download">Download</string>
    <string name="action_download_background">Download in background</string>
    <string name="action_download_later">Later</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_case">Edit Case</string>
    <string name="action_edit_contact">Edit Contact</string>
    <string name="action_edit_environment">Edit Environment</string>
    <string name="action_edit_event">Edit Event</string>
    <string name="action_edit_sample">Edit Sample</string>
    <string name="action_edit_environment_sample">Edit Environment Sample</string>
    <string name="action_forgot_PIN">Forgot PIN?</string>
    <string name="action_help">Help</string>
    <string name="action_install_app">Install</string>
    <string name="action_install_later">Install later</string>
    <string name="action_loadMore">Load more</string>
    <string name="action_login">Sign in</string>
    <string name="action_login_default_user">Sign in as demo user</string>
    <string name="action_logout">Logout</string>
    <string name="action_logout_anyway">Logout anyway</string>
    <string name="action_markAllAsRead">Mark all as read</string>
    <string name="action_new">New</string>
    <string name="action_new_case">New Case</string>
    <string name="action_new_immunization">New Immunization</string>
    <string name="action_new_campaign_form_data">New Campaign Form Data</string>
    <string name="action_new_contact">New Contact</string>
    <string name="action_new_environment">New Environment</string>
    <string name="action_new_event">New Event</string>
    <string name="action_new_sample">New Sample</string>
    <string name="action_new_environment_sample">New Environment Sample</string>
    <string name="action_new_task">New Task</string>
    <string name="action_not_executable">Not Executable</string>
    <string name="action_ok">OK</string>
    <string name="action_open_event_participant_case">Open Case of Event Participant</string>
    <string name="action_open_prescription">Open Prescription</string>
    <string name="action_open_resulting_case">Open Resulting Case</string>
    <string name="action_open_source_case">Open Source Case</string>
    <string name="action_open_linked_case">Open Linked Case</string>
    <string name="action_link_case">Link Case</string>
    <string name="action_open_syncLog">Synchronization conflicts</string>
    <string name="action_options">Options</string>
    <string name="action_pick_gps">Pick current GPS for address</string>
    <string name="action_redownload_app">Redownload</string>
    <string name="action_redownload_app_later">Redownload later</string>
    <string name="action_refer_case_from_poe">Refer case from Point of Entry</string>
    <string name="action_report">Report Problem</string>
    <string name="action_repull_data">Re-synchronize data</string>
    <string name="action_reset_filters">Reset filters</string>
    <string name="action_save">Save</string>
    <string name="action_save_case">Save Case</string>
    <string name="action_save_clinical_visit">Save Clinical Visit</string>
    <string name="action_save_contact">Save Contact</string>
    <string name="action_save_event">Save Event</string>
    <string name="action_save_event_participant">Save Event Participant</string>
    <string name="action_save_prescription">Save Prescription</string>
    <string name="action_save_sample">Save Sample</string>
    <string name="action_save_environment_sample">Save Environment Sample</string>
    <string name="action_save_task">Save Task</string>
    <string name="action_save_treatment">Save Treatment</string>
    <string name="action_save_visit">Save Follow-up Visit</string>
    <string name="action_select">Select</string>
    <string name="action_send">Send</string>
    <string name="action_set_cleared_to_no">Set Cleared to No</string>
    <string name="action_set_cleared_to_unknown">Set Cleared to Unknown</string>
    <string name="action_show_classification_rules">View classification rules</string>
    <string name="action_submit_report">Submit Weekly Report</string>
    <string name="action_sync">Sync</string>
    <string name="action_transfer_case">Transfer case</string>
    <string name="action_try_again">Try again</string>
    <string name="action_turn_on_gps">Turn On GPS</string>
    <string name="action_update_search">Update search</string>
    <string name="action_save_pathogen_test">Save Pathogen Test</string>
    <string name="action_edit_pathogen_test">Edit Pathogen Test</string>
    <string name="action_submit_case_numbers">Submit Case Numbers</string>
    <string name="action_kex_lbds">LBDS Key Exchange</string>
    <string name="action_sync_person_lbds">LBDS Sync Persons</string>
    <string name="action_sync_case_lbds">LBDS Sync Cases</string>
    <string name="action_save_vaccination">Save Vaccination</string>
    <string name="action_edit_vaccination">Edit Vaccination</string>
    <string name="caption_address">Address</string>
    <string name="caption_age">Age</string>
    <string name="caption_attended_by">Attended by</string>
    <string name="caption_case_clinical_visits">Clinical Assessments</string>
    <string name="caption_case_contacts">Case Contacts</string>
    <string name="caption_case_epidemiological_data">Epidemiological Info</string>
    <string name="caption_case_fatality_rate">Case Fatality Rate</string>
    <string name="caption_case_health_conditions">Pre-Existing Conditions</string>
    <string name="caption_case_hospitalization">Hospitalization Info</string>
    <string name="caption_case_information">Case Information</string>
    <string name="caption_case_maternal_history">Maternal History</string>
    <string name="caption_case_port_health_info">Port Health Info</string>
    <string name="caption_case_prescriptions">Prescriptions</string>
    <string name="caption_case_samples">Case Samples</string>
    <string name="caption_case_tasks">Case Tasks</string>
    <string name="caption_case_events">Case Events</string>
    <string name="caption_case_immunizations">Case Immunizations</string>
    <string name="caption_case_vaccinations">Case Vaccinations</string>
    <string name="caption_case_treatments">Treatments</string>
    <string name="caption_case_similarity_create">Create a new case</string>
    <string name="caption_changed_data_lost">Changed data lost during re-sync.</string>
    <string name="caption_clinical_measurements">Clinical Measurements</string>
    <string name="caption_clinical_visit_date">Date of Assessment</string>
    <string name="caption_clinical_visit_information">Assessment Information</string>
    <string name="caption_clinical_visit_time">Time of Assessment</string>
    <string name="caption_confirmation_date">Confirmation Date: %1$s</string>
    <string name="caption_confirmed">Confirmed</string>
    <string name="caption_confirmed_case">Confirmed Case</string>
    <string name="caption_confirmed_events">Confirmed Events</string>
    <string name="caption_contact_information">Contact Information</string>
    <string name="caption_contact_tasks">Contact Tasks</string>
    <string name="caption_contact_epidemiological_data">Epidemiological info</string>
    <string name="caption_contact_visits">Follow-Up Information</string>
    <string name="caption_contact_immunizations">Contact Immunizations</string>
    <string name="caption_contact_vaccinations">Contact Vaccinations</string>
    <string name="caption_converted_to_case">Converted to Case</string>
    <string name="caption_date_of_birth">Date of birth (year / month / day)</string>
    <string name="caption_date_of_sampling">Date of Sampling</string>
    <string name="caption_drawer_close">Close navigation drawer</string>
    <string name="caption_drawer_open">Open navigation drawer</string>
    <string name="caption_dropped">Dropped</string>
    <string name="caption_epi_week">Epi Week</string>
    <string name="caption_report">Report</string>
    <string name="caption_email">E-mail:</string>
    <string name="caption_environment_information">Environment Information</string>
    <string name="caption_environment_samples">Environment Samples</string>
    <string name="caption_environment_tasks">Environment Tasks</string>
    <string name="caption_environment_sample_information">Environment Sample Information</string>
    <string name="caption_event_description">Description</string>
    <string name="caption_event_information">Event Information</string>
    <string name="caption_event_location">Location</string>
    <string name="caption_event_participant">Event Participant</string>
    <string name="caption_event_participant_immunizations">Event participant Immunizations</string>
    <string name="caption_event_participant_vaccinations">Event participant Vaccinations</string>
    <string name="caption_event_participants">Event Participants</string>
    <string name="caption_event_period">Date of event</string>
    <string name="caption_event_tasks">Event Tasks</string>
    <string name="caption_executed_by">Executed by</string>
    <string name="caption_facility_or_home">Place of stay</string>
    <string name="main_menu_cases">Cases</string>
    <string name="main_menu_contacts">Contacts</string>
    <string name="main_menu_dashboard">Dashboard</string>
    <string name="main_menu_events">Events</string>
    <string name="main_menu_reports">Reports</string>
    <string name="main_menu_samples">Samples</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_tasks">Tasks</string>
    <string name="hint_enter_current_password">"Enter Current Password"</string>
    <string name="hint_enter_confirm_new_password">"Enter Confirm Password"</string>
    <string name="caption_enter_current_password">"Enter Current Password"</string>
    <string name="caption_enter_new_password">"Enter new Password"</string>
    <string name="caption_confirm_new_password">"Enter Confirm Password"</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_generate_password">Generate Password</string>
    <string name="action_strength_password">Password Strength</string>
    <string name="heading_change_password">Change Password</string>
    <string name="info_change_password">To change your Password you will <b>need to enter your SORMAS user password.</b></string>
</resources>