<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_sync_option_menu_24dp"
        android:title="@string/action_sync"
        app:showAsAction="always"/>

    <item
        android:icon="@drawable/ic_more_option_menu_24dp"
        android:title="@string/action_options"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_help"
                android:icon="@drawable/ic_help_option_menu_24dp"
                android:title="@string/action_help"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/action_report"
                android:icon="@drawable/ic_report_problem_option_menu_24dp"
                android:title="@string/action_report"
                app:showAsAction="always|withText"/>
        </menu>

    </item>
</menu>