<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ SORMAS® - Surveillance Outbreak Response Management & Analysis System
  ~ Copyright © 2016-2018 Helmholtz-Zentrum für Infektionsforschung GmbH (HZI)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_add_option_menu_24dp"
        android:title="@string/action_new"
        app:showAsAction="always"/>

    <item
        android:icon="@drawable/ic_more_option_menu_24dp"
        android:title="@string/action_options"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_sync"
                android:icon="@drawable/ic_sync_option_menu_24dp"
                android:title="@string/action_sync"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/action_readAll"
                android:icon="@drawable/ic_mark_all_as_read_option_menu_24dp"
                android:title="@string/action_markAllAsRead"
                app:showAsAction="always|withText"/>
        </menu>

    </item>
</menu>