<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_options"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/action_options"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_reload"
                android:icon="@drawable/ic_autorenew_black_24dp"
                android:title="@string/action_reload"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/action_markAllAsRead"
                android:icon="@drawable/ic_check_circle_black_24dp"
                android:title="@string/action_markAllAsRead"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/action_report"
                android:icon="@drawable/ic_report_black_24dp"
                android:title="@string/action_report"
                app:showAsAction="always|withText"/>
        </menu>

    </item>

</menu>