<?xml version="1.0" encoding="utf-8"?><!--
  ~ SORMAS® - Surveillance Outbreak Response Management & Analysis System
  ~ Copyright © 2016-2018 Helmholtz-Zentrum für Infektionsforschung GmbH (HZI)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:descendantFocusability="beforeDescendants"
    android:id="@+id/base_layout">

    <data>

        <variable
            name="data"
            type="de.symeda.sormas.app.login.ChangePasswordViewModel" />

        <import type="de.symeda.sormas.app.component.controls.ControlButtonType" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/parentLayoutHorizontalPadding"
                android:paddingRight="@dimen/parentLayoutHorizontalPadding"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_marginTop="32dp"
                    android:id="@+id/changePasswordHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/heading_change_password"
                    style="@style/LoginSignInText" />

                <TextView
                    android:id="@+id/signInSubHeader"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/info_change_password"
                    style="@style/LoginSignInTagLineText" />

                <de.symeda.sormas.app.component.controls.ControlPasswordField
                    android:id="@+id/change_password_current_password"
                    style="@style/ControlSingleColumnStyle"
                    app:caption="@string/caption_enter_current_password"
                    app:description="@string/caption_enter_current_password"
                    app:required="true"
                    android:layout_marginTop="32dp"
                    app:hint="@string/hint_enter_current_password"
                    app:labelCaption="@string/caption_enter_current_password"
                    app:value="@={data.currentPassword}"

                    />
                <!---for error-->
                <TextView
                    android:id="@+id/incorrect_current_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/message_incorrect_current_password"
                    android:textColor="@color/errorBackground" />

                <de.symeda.sormas.app.component.controls.ControlPasswordField
                    android:id="@+id/change_password_new_password"
                    style="@style/ControlSingleColumnStyle"
                    android:layout_marginTop="10dp"

                    android:hint="@string/caption_enter_new_password"
                    app:caption="@string/caption_enter_new_password"
                    app:description="@string/caption_enter_new_password"
                    app:labelCaption="@string/caption_enter_new_password"
                    app:hint="@string/caption_enter_new_password"
                    app:required="true"
                    app:value="@={data.newPassword}" />

                <TextView
                    android:id="@+id/incorrect_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message_incorrect_new_password"
                    android:visibility="gone"
                    android:textColor="@color/errorBackground" />

                <!--                android:onClick="registrationDataCheck"-->


                <de.symeda.sormas.app.component.controls.ControlPasswordField
                    android:id="@+id/change_password_confirm_password"
                    style="@style/ControlSingleColumnStyle"
                    app:description="@string/caption_confirm_new_password"
                    app:caption="@string/caption_confirm_new_password"
                    app:required="true"
                    app:hint="@string/hint_enter_confirm_new_password"
                    app:inputType="textPassword"
                    app:hintEnabled="false"
                    android:layout_marginTop="10dp"
                    app:labelCaption="@string/caption_confirm_new_password"
                    app:value="@={data.confirmPassword}" />
                <!---for error-->
                <TextView
                    android:id="@+id/incorrect_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message_not_match_password"
                    android:visibility="gone"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/errorBackground" />

                <Button
                    android:id="@+id/btn_changePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_change_password"
                    style="@style/PrimaryButtonStyle"
                    android:onClick="savePassword" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">
                    <!---for error-->
                    <TextView

                        android:id="@+id/action_password_strength"
                        android:visibility="gone"
                        style="@style/LinkButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/action_strength_password"
                        android:textAlignment="viewStart" />
                    <!--                    android:onClick="registrationDataCheck"-->

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <!--                <de.symeda.sormas.app.component.controls.ControlButton-->
                    <!--                    android:id="@+id/btn_changePassword"-->
                    <!--                    android:layout_width="match_parent"-->
                    <!--                    android:layout_height="wrap_content"-->
                    <!--                    android:layout_marginTop="@dimen/buttonControlMarginBottom"-->
                    <!--                    android:layout_marginBottom="@dimen/buttonControlMarginBottom"-->
                    <!--                    android:onClick="savePassword"-->
                    <!--                    android:text="@string/action_change_password"-->
                    <!--                    app:buttonType="@{ControlButtonType.SECONDARY}"-->
                    <!--                    app:rounded="true" />-->

                    <Button
                        android:id="@+id/action_generatePassword"
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_generate_password"
                        style="@style/SubtleButtonStyle"
                        android:onClick="generatePassword" />

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="48dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/action_backToSettings"
                        style="@style/LinkButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="backToSettings"
                        android:text="@string/action_back_to_settings"
                        android:textAlignment="viewStart" />

                </LinearLayout>

            </LinearLayout>

            <include
                android:id="@+id/notification_frame"
                layout="@layout/activity_root_notification_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </FrameLayout>

    </ScrollView>

</layout>